Mon May 17 21:30:50 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* .gitignore: updated.

Mon May 17 21:08:53 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (argv_size): merged into join_argv() to maintain the
	  agreement with it.  removed code has a calclulation bug.
	  fixed [Bug#2388]

	* win32/win32.c (join_argv): calc and return the length of joined
	  argv.
	  the cause of the original bug was clarified by Masaya TARUI
	  <tarui AT prx.jp> and the solution was suggested by him, too.

Mon Apr  5 09:20:08 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/iso_2022_jp.h: add CP50220.

	* enc/trans/iso2022.trans: add converter for CP50220.

Mon May 17 09:37:25 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/fileutils.rb (FileUtils::Entry_#entries): returns pathname in
	  UTF-8 on Windows to allow FileUtils accessing all pathnames
	  internally.

Mon May 17 01:07:48 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dln.c (rb_w32_check_imported): workaround for VC6.

Sun May 16 22:21:32 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* proc.c (mnew): initialize a field.  a patch from Takahiro Kambe.
	  [ruby-dev:41312]

Sun May 16 22:17:35 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* eval.c (setup_exception): let SystemStackError#backtrace return an
	  single element array instead of string itself.  [ruby-core:30196]

Sun May 16 21:51:04 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* parse.y (parser_read_escape, parser_tokadd_escape): allow a hex or
	  octal encoded character after \c.  This seemed to be prohibited at
	  r13836, but its ChangeLog mentions nothing about this prohibition.
	  So I assume this prohibition is not intended.  [ruby-core:27229]

Sun May 16 21:14:04 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* ruby/test_rubyoptions.rb (TestRubyOptions#test_segv_test):
	  fixes "NoMethodError: undefined method `[]=' for nil:NilClass"

Sun May 16 17:16:09 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* proc.c (proc_binding): don't propagative filename and line_no of