@@ -1,3 +1,14 @@
+Mon May 17 22:19:16 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* process.c: suppress warning for signed and unsigned type
+	  inconsistency.
+
+	* ext/psych/parser.c: ditto.
+
+	* ext/sdbm/_sdbm.c: ditto.
+
+	* ext/syck/rubyext.c: ditto.
+
 Mon May 17 21:30:50 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* .gitignore: updated.
